src/test/ui/repr/basic.stderr
error: malformed `repr` attribute input
  --> $DIR/basic.rs:81:1
   |
LL | #[repr]
   | ^^^^^^^ help: must be of the form: `#[repr(C)]`

error[E0589]: invalid `repr(transparent)` attribute: no arguments expected
  --> $DIR/basic.rs:4:8
   |
LL | #[repr(transparent())]
   |        ^^^^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(transparent)]
   |                  --

error[E0589]: invalid `repr(transparent)` attribute: no arguments expected
  --> $DIR/basic.rs:8:8
   |
LL | #[repr(transparent(1, 2, 3))]
   |        ^^^^^^^^^^^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(transparent)]
   |                  --

error[E0589]: invalid `repr(C)` attribute: no arguments expected
  --> $DIR/basic.rs:12:8
   |
LL | #[repr(C())]
   |        ^^^
   |
help: remove additional values
   |
LL | #[repr(C)]
   |        --

error[E0589]: invalid `repr(C)` attribute: no arguments expected
  --> $DIR/basic.rs:16:8
   |
LL | #[repr(C(1, 2, 3))]
   |        ^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(C)]
   |        --

error[E0589]: invalid `repr(simd)` attribute: no arguments expected
  --> $DIR/basic.rs:20:8
   |
LL | #[repr(simd())]
   |        ^^^^^^
   |
help: remove additional values
   |
LL | #[repr(simd)]
   |           --

error[E0589]: invalid `repr(simd)` attribute: no arguments expected
  --> $DIR/basic.rs:24:8
   |
LL | #[repr(simd(1, 2, 3))]
   |        ^^^^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(simd)]
   |           --

error[E0589]: invalid `repr(no_niche)` attribute: no arguments expected
  --> $DIR/basic.rs:28:8
   |
LL | #[repr(no_niche())]
   |        ^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(no_niche)]
   |               --

error[E0589]: invalid `repr(no_niche)` attribute: no arguments expected
  --> $DIR/basic.rs:32:8
   |
LL | #[repr(no_niche(1, 2, 3))]
   |        ^^^^^^^^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(no_niche)]
   |               --

error[E0693]: invalid `repr(align)` attribute: expected a non-negative number
  --> $DIR/basic.rs:37:8
   |
LL | #[repr(align)]
   |        ^^^^^
   |
help: add a value
   |
LL | #[repr(align(/* value */))]
   |             ^^^^^^^^^^^^^

error[E0693]: invalid `repr(align)` attribute: expected a non-negative number
  --> $DIR/basic.rs:41:8
   |
LL | #[repr(align())]
   |        ^^^^^^^
   |
help: add a value
   |
LL | #[repr(align(/* value */))]
   |             ^^^^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/basic.rs:45:14
   |
LL | #[repr(align(foo()))]
   |              ^^^^^ not a non-negative number

error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/basic.rs:49:8
   |
LL | #[repr(align = "1")]
   |        ^^^^^^^^^^^
   |
help: use parentheses instead
   |
LL | #[repr(align(1))]
   |             ^ ^

error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/basic.rs:53:8
   |
LL | #[repr(align = "")]
   |        ^^^^^^^^^^
   |
help: use parentheses instead and add a value
   |
LL | #[repr(align(/* value */))]
   |             ^^^^^^^^^^^^^

error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/basic.rs:57:8
   |
LL | #[repr(align = true)]
   |        ^^^^^^^^----
   |                |
   |                must be a non-negative number

error[E0693]: invalid `repr(align)` attribute: expected only one value
  --> $DIR/basic.rs:61:8
   |
LL | #[repr(align(1, 2, 3))]
   |        ^^^^^^-------^
   |              |
   |              only one argument expected

error[E0693]: invalid `repr(packed)` attribute: expected a non-negative number
  --> $DIR/basic.rs:65:8
   |
LL | #[repr(packed())]
   |        ^^^^^^^^
   |
help: add a value
   |
LL | #[repr(packed(/* value */))]
   |              ^^^^^^^^^^^^^

error[E0693]: invalid `repr(packed)` attribute: expected only one value
  --> $DIR/basic.rs:69:8
   |
LL | #[repr(packed(1, 2, 3))]
   |        ^^^^^^^-------^
   |               |
   |               only one argument expected

error[E0589]: invalid `repr(i8)` attribute: no arguments expected
  --> $DIR/basic.rs:73:8
   |
LL | #[repr(i8())]
   |        ^^^^
   |
help: remove additional values
   |
LL | #[repr(i8)]
   |         --

error[E0589]: invalid `repr(i8)` attribute: no arguments expected
  --> $DIR/basic.rs:77:8
   |
LL | #[repr(i8(1, 2, 3))]
   |        ^^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(i8)]
   |         --

error[E0565]: meta item in `repr` must be an identifier
  --> $DIR/basic.rs:84:8
   |
LL | #[repr(123)]
   |        ^^^

error[E0565]: meta item in `repr` must be an identifier
  --> $DIR/basic.rs:87:8
   |
LL | #[repr("foo")]
   |        ^^^^^

error[E0589]: invalid `repr(transparent)` attribute: no arguments expected
  --> $DIR/basic.rs:4:8
   |
LL | #[repr(transparent())]
   |        ^^^^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(transparent)]
   |                  --

error[E0589]: invalid `repr(transparent)` attribute: no arguments expected
  --> $DIR/basic.rs:8:8
   |
LL | #[repr(transparent(1, 2, 3))]
   |        ^^^^^^^^^^^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(transparent)]
   |                  --

error[E0589]: invalid `repr(C)` attribute: no arguments expected
  --> $DIR/basic.rs:12:8
   |
LL | #[repr(C())]
   |        ^^^
   |
help: remove additional values
   |
LL | #[repr(C)]
   |        --

error[E0589]: invalid `repr(C)` attribute: no arguments expected
  --> $DIR/basic.rs:16:8
   |
LL | #[repr(C(1, 2, 3))]
   |        ^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(C)]
   |        --

error[E0589]: invalid `repr(simd)` attribute: no arguments expected
  --> $DIR/basic.rs:20:8
   |
LL | #[repr(simd())]
   |        ^^^^^^
   |
help: remove additional values
   |
LL | #[repr(simd)]
   |           --

error[E0589]: invalid `repr(simd)` attribute: no arguments expected
  --> $DIR/basic.rs:24:8
   |
LL | #[repr(simd(1, 2, 3))]
   |        ^^^^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(simd)]
   |           --

error[E0589]: invalid `repr(no_niche)` attribute: no arguments expected
  --> $DIR/basic.rs:28:8
   |
LL | #[repr(no_niche())]
   |        ^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(no_niche)]
   |               --

error[E0589]: invalid `repr(no_niche)` attribute: no arguments expected
  --> $DIR/basic.rs:32:8
   |
LL | #[repr(no_niche(1, 2, 3))]
   |        ^^^^^^^^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(no_niche)]
   |               --

error[E0693]: invalid `repr(align)` attribute: expected a non-negative number
  --> $DIR/basic.rs:37:8
   |
LL | #[repr(align)]
   |        ^^^^^
   |
help: add a value
   |
LL | #[repr(align(/* value */))]
   |             ^^^^^^^^^^^^^

error[E0693]: invalid `repr(align)` attribute: expected a non-negative number
  --> $DIR/basic.rs:41:8
   |
LL | #[repr(align())]
   |        ^^^^^^^
   |
help: add a value
   |
LL | #[repr(align(/* value */))]
   |             ^^^^^^^^^^^^^

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/basic.rs:45:14
   |
LL | #[repr(align(foo()))]
   |              ^^^^^ not a non-negative number

error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/basic.rs:49:8
   |
LL | #[repr(align = "1")]
   |        ^^^^^^^^^^^
   |
help: use parentheses instead
   |
LL | #[repr(align(1))]
   |             ^ ^

error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/basic.rs:53:8
   |
LL | #[repr(align = "")]
   |        ^^^^^^^^^^
   |
help: use parentheses instead and add a value
   |
LL | #[repr(align(/* value */))]
   |             ^^^^^^^^^^^^^

error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/basic.rs:57:8
   |
LL | #[repr(align = true)]
   |        ^^^^^^^^----
   |                |
   |                must be a non-negative number

error[E0693]: invalid `repr(align)` attribute: expected only one value
  --> $DIR/basic.rs:61:8
   |
LL | #[repr(align(1, 2, 3))]
   |        ^^^^^^-------^
   |              |
   |              only one argument expected

error[E0693]: invalid `repr(packed)` attribute: expected a non-negative number
  --> $DIR/basic.rs:65:8
   |
LL | #[repr(packed())]
   |        ^^^^^^^^
   |
help: add a value
   |
LL | #[repr(packed(/* value */))]
   |              ^^^^^^^^^^^^^

error[E0693]: invalid `repr(packed)` attribute: expected only one value
  --> $DIR/basic.rs:69:8
   |
LL | #[repr(packed(1, 2, 3))]
   |        ^^^^^^^-------^
   |               |
   |               only one argument expected

error[E0589]: invalid `repr(i8)` attribute: no arguments expected
  --> $DIR/basic.rs:73:8
   |
LL | #[repr(i8())]
   |        ^^^^
   |
help: remove additional values
   |
LL | #[repr(i8)]
   |         --

error[E0589]: invalid `repr(i8)` attribute: no arguments expected
  --> $DIR/basic.rs:77:8
   |
LL | #[repr(i8(1, 2, 3))]
   |        ^^^^^^^^^^^
   |
help: remove additional values
   |
LL | #[repr(i8)]
   |         --

error: aborting due to 41 previous errors

Some errors have detailed explanations: E0565, E0589, E0693.
For more information about an error, try `rustc --explain E0565`.
